--- a/sim_config/motion_controller.yaml
+++ b/sim_config/motion_controller.yaml
@@ -5,3 +5,4 @@
     odom_frame_id: "odom"
     base_frame_id: "base_link"
     use_bypass: true
+    tf_timeout_threshold: 1.0 # Default tf timeout (50ms)
